# clan-stats

./: .gitignore  .gitmodules  README.md  pyproject.toml  pyrightconfig.json  requirements_dev.txt  tox.ini
rest_cache/: docker-compose.yml  nginx.conf
src/: bungio_experiment.py  copy_paste_file_reformatter.py
src/clan_stats/: __init__.py  __main__.py  config.py  discord.py  exceptions.py  fireteams.py  log_config.py  terminal.py
src/clan_stats/actions/: activity_check.py  clan_events.py  clan_fireteams.py  interactive_clan_list.py  interactive_clan_list.tcss  player_activity_summary.py  player_info.py  player_search.py  raid_report.py  search.py
src/clan_stats/clan_manager/: __init__.py  clan_membership_database.py  membership_database.py  orm_types.py
src/clan_stats/cli/: cli_main.py  exit_codes.py
src/clan_stats/data/: history_cache.py  manifest.py  trials_report_api.py
src/clan_stats/event/: event_finder.py  fireteams.py
src/clan_stats/ui/: lists.py  tables.py
src/clan_stats/util/: async_utils.py  casing.py  itertools.py  optional.py  set_helpers.py  stopwatch.py  time.py
tests/: aio_bungie_wrapper_e2e.py_  test_api_wrapper.py_  test_discord.py  test_discord.py_  test_time.py
tests/clan_stats/: conftest.py  test_config.yaml  test_terminal.py
tests/clan_stats/clan_manager/: test_clan_membership_database.py  test_membership_database.py  test_orm_types.py
tests/clan_stats/data/: test_history_cache.py  test_trials_report_api.py
tests/clan_stats/event/: test_event_finder.py
tests/clan_stats/retriever/: test_activity_database.py  test_cached_data_retriever.py  test_data_retrievers.py  test_databases.py  test_manifest.py
tests/clan_stats/ui/: test_tables.py
tests_src/: random_bungie_data.py  randomdata.py  visual_time.py
(+32 files in other folders)
