[project]
name = "clan_stats"
version = "0.1.0"
description = "Destiny 2 Clan Management Tool"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic",
    "pydantic_yaml",
    "aiobungie",
    "blessed",
    "bungio",
    "tabulate",
    "textual",
    "sqlalchemy[pysqlite]~=1.4",
]

[project.scripts]
clan-stats = "clan_stats.__main__:main"

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
#
#[tool.setuptools.packages.find]
#include = ["clan_stats"]