[project]
name = "clan_stats"
version = "0.1.0"
description = "Destiny 2 Clan Management Tool"
requires-python = "~=3.11"  # Probably can be updated when we drop aiobungie.
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic",
    "pydantic_yaml",
    "aiobungie",
    "aiohttp",
    "blessed",
    "blessedtable",
    "bungio",
    "tabulate",
    "textual",
    "sqlalchemy~=1.4",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "types-mock",
    "tox",
    "build",
    "flake8",
    "basedpyright",
]

[project.scripts]
clan-stats = "clan_stats.__main__:main"

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
